# gap_finder

./: .env.example  .gitignore  ARCH.md  CLAUDE.md  README.md  pyproject.toml  run.py
.claude/commands/: angle.md  brief.md  (+7 more)
agents/: README.md  run.py
board/: README.md
crawler/: __init__.py  alpha_vantage.py  bls.py  dart.py  data_go_kr.py  ecos.py  eia.py  finnhub.py  fred.py  naver.py  newsapi.py  polygon.py
db/: README.md  enriched.db  gapfinder.db  raw.db  raw.db-shm
docs/: 02_platform_strategy.md  03_stock_selection.md  04_database_design.md  05_macro_update_system.md  06_roadmap.md  07_article_template.md  08_risk_control.md  10_data_pipeline.md  11_pdf_comparison.md  13_writing_principles.md  14_agent_reinterpret.md  15_agent_writer.md  README.md  architecture_v2.md
output/: 005930_삼성전자_20260401.md  EXPERIMENT_나스닥관세_2x2.md  NASDAQ_관세_②_db+web_피드백전_20260409.md  NASDAQ_관세_③_db_피드백후_20260409.md  NASDAQ_관세_④_db+web_피드백후_20260409.md  NASDAQ_관세보다할인율_20260409.md  NASDAQ_관세보다할인율_db_20260409.md  NASDAQ_관세전쟁2라운드_20260409.md  NASDAQ_트럼프관세전쟁_20260406.md  NKE_나이키_20260401_naver.md  PLTR_팔란티어_20260414.md  README.md
runners/: eval_runner.py  longlist.py  pipeline.py
scripts/: README.md  collect_ecos.py  collect_energy.py  collect_events.py  collect_fred.py  collect_macro.py  collect_news.py  collect_stocks.py  collect_trade.py  collect_us.py  init_db.py  init_enriched_db.py  init_raw_db.py  load_env.py  seed_nike.py  setup_keys.py
status/: README.md  changelog.md  coverage.md  progress.md
v0.1/: README.md
viz/: README.md  example_workflow.html  index.html
(+69 files in other folders)
